# renoir

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: test.rs
examples/test/: Cargo.toml
examples/test/src/: main.rs
renoir/: Cargo.toml
renoir/src/: app.rs  lib.rs  math.rs
renoir/src/render/: instance.rs  renderer.rs  shader.wgsl  texture.rs
renoir/src/state/: app_state.rs  camera.rs  input.rs  mod.rs  time.rs  window_options.rs
src/: camera.rs  input.rs  lib.rs  macros.rs  math.rs  state.rs  time.rs  window_options.rs
src/render/: camera.rs  mod.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
src/state/: flow.rs  input.rs  mod.rs  window_options.rs
