[package]
name = "renoir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytemuck = { version = "1.18.0", features = ["derive"] }
env_logger = "0.11.5"
hecs = "0.10.5"
log = "0.4.22"
nalgebra = { version = "0.33.0", features = ["bytemuck"] }
pollster = "0.3.0"
raw-window-handle = "0.6.2"
strum = { version = "0.26.3", features = [ "derive" ] }
wgpu = "22.1.0"
winit = "0.30.5"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
