[package]
name = "renoir"
version = "0.1.0"
edition = "2021"

[features]
ecs = [ "dep:hecs" ]

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
env_logger = "0.11.6"
hecs = { version = "0.10.5", optional = true }
log = "0.4.25"
nalgebra = { version = "0.33.2", features = ["bytemuck"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
strum = { version = "0.26.3", features = [ "derive" ] }
wgpu = "24.0.0"
winit = "0.30.8"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
